fix spacing selector links

--- a/resources/sass/menu/_selector.scss
+++ b/resources/sass/menu/_selector.scss
@@ -33,7 +33,7 @@ nav.selector {
     span {
       display: block;
       margin-left: $space-3x;
-      margin-top: 1px;
+      margin-top: 2px;
     }
   }
 
